# lyn

./: .gitignore  CMakeLists.txt  README.md  arm-none-eabi.cmake  draft.tex  language.tex  logbook.tex  manifest.scm
.github/workflows/: ci.yml
docs/: language.tex  logbook.tex
examples/: external.scm  fib.scm  gcd.scm  identity.scm  recursive-even-odd.scm
include/: anf.h  expr.h  location.h  meta.h  passes.h  token.h  types.h
liblyn/: CMakeLists.txt  README.md  add.s  and.s  const.s  div.s  eq.s  ge.s  gt.s  land.s  le.s  lor.s  lt.s  lxor.s  mod.s  mul.s  neg.s  neq.s  or.s  shl.s  shr.s  sub.s  xor.s
lync/: CMakeLists.txt  README.md  main.cpp
lync/asm/: genasm.cpp  main.cpp
lync/include/: anf.h  constants.h  driver.h  expr.h  meta.h  passes.h  primitives.h  span.h  string_table.h  symbol_table.h  token.h  types.h
lync/print-anf/: main.cpp
lync/src/: alpha_convert.cpp  anf.cpp  genasm.cpp  lexer.cpp  parser.cpp  parser.yy  primitives.cpp  print-anf.cpp  scopify.cpp  typecheck.cpp
lync/tests/: CMakeLists.txt  meta_tests.cpp  symbol_table_tests.cpp  test_fail.sh
lync/tests/fails/: application_return_mismatch.scm  application_type_mismatch.scm  clojures_are_not_supported.scm  if_cond_branches_do_not_unify.scm  if_cond_not_bool.scm  non-existent-variable-ref.scm
src/: anf.cpp  asmgen.cpp  lexer.cpp  main.cpp  parser.cpp  parser.yy  print-anf.cpp  scopify.cpp  typecheck.cpp
